# rit

./: .gitignore  Cargo.toml  LICENSE  LOG.md  README.md  test.json
benchmarks/: Cargo.toml
benchmarks/benches/: compression_benchmark.rs
benchmarks/files/: output-onlinefiletools.txt
src/: args.rs  branches.rs  commit.rs  constants.rs  database.rs  hash.rs  index.rs  main.rs  obj_database.rs  repo.rs  staging.rs  tree.rs  utility.rs
src/rit/: Cargo.toml
src/rit/src/: args.rs  compression.rs  constants.rs  database.rs  index.rs  main.rs  obj_database.rs  repo.rs  staging.rs  utility.rs
