[package]
name = "rit"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"  # Check for the latest version
tokio = { version = "1", features = ["full"] }  # Optional for async
zstd = "0.10"  
json = "0.12"  
hex = "0.4"  
md5 = "0.7"


[dev-dependencies]
tempfile = "3.13"  # Optional for tests